[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/Enemigos/Enemigo.png" type="Texture" id=1]
[ext_resource path="res://Enemigos.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 212, 144, 106 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 212, 144, 106 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 106, 144, 106 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 106, 144, 106 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 106, 144, 106 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 106, 144, 106 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 318, 144, 106 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 318, 144, 106 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 318, 144, 106 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 318, 144, 106 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 848, 144, 106 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 848, 144, 106 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 848, 144, 106 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 848, 144, 106 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 742, 144, 106 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 742, 144, 106 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 742, 144, 106 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 742, 144, 106 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 144, 106 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 144, 106 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 144, 106 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 144, 106 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 212, 144, 106 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 212, 144, 106 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 636, 144, 106 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 636, 144, 106 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 636, 144, 106 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 636, 144, 106 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "damage1",
"speed": 0.5
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack1",
"speed": 2.5
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk2",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "damage3",
"speed": 0.5
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "dead3",
"speed": 0.4
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "attack3",
"speed": 2.5
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "walk1",
"speed": 2.5
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "dead1",
"speed": 0.4
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "walk3",
"speed": 2.5
} ]

[sub_resource type="CapsuleShape2D" id=30]
radius = 28.0278
height = 58.2261

[sub_resource type="CapsuleShape2D" id=31]
radius = 47.098
height = 0.0

[node name="Enemigos" type="Area2D"]
position = Vector2( -1.42999, -16.057 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
speed = 29

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.107697, 0.429626 )
scale = Vector2( 1.57943, 1.70711 )
frames = SubResource( 29 )
animation = "walk2"
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.24744, -2.11414 )
shape = SubResource( 30 )
one_way_collision_margin = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="Golpe" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Golpe"]
position = Vector2( -61.4393, 10.5994 )
shape = SubResource( 31 )
disabled = true
one_way_collision = true

[node name="Timer3" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
[connection signal="area_entered" from="." to="." method="_on_Enemigos_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemigos_area_exited"]
[connection signal="body_entered" from="Golpe" to="." method="_on_Golpe_body_entered"]
